Source/WebCore/platform/mediarecorder/MediaRecorderPrivateEncoder.cpp
@@ -429,6 +429,7 @@ void MediaRecorderPrivateEncoder::audioSamplesAvailable(const MediaTime& time, s
     }
     RetainPtr sample = adoptCF(sampleBuffer);
 
+    m_lastRawAudioSample = time;
     audioConverter()->addSampleBuffer(sampleBuffer);
 }
 
@@ -487,7 +488,7 @@ void MediaRecorderPrivateEncoder::appendVideoFrame(MediaTime sampleTime, Ref<Vid
                 m_videoEncoder = WTF::move(*result);
                 Ref { *m_videoEncoder }->setRates(videoBitRate(), 0);
                 m_videoEncoderCreationPromise = nullptr;
-                return encodePendingVideoFrames();
+                return encodePendingVideoFrames(MediaTime::positiveInfiniteTime());
             }
             return GenericPromise::createAndResolve();
         })->chainTo(WTF::move(producer));
@@ -502,7 +503,7 @@ void MediaRecorderPrivateEncoder::appendVideoFrame(MediaTime sampleTime, Ref<Vid
     m_pendingVideoFrames.append({ WTF::move(frame), sampleTime });
     LOG(MediaStream, "appendVideoFrame:enqueuing raw video frame:%f queue:%zu first:%f last:%f (received audio:%d)", sampleTime.toDouble(), m_pendingVideoFrames.size(), m_pendingVideoFrames.first().second.toDouble(), m_pendingVideoFrames.last().second.toDouble(), !!m_lastEnqueuedAudioTimeUs.load());
 
-    encodePendingVideoFrames();
+    encodePendingVideoFrames(MediaTime::positiveInfiniteTime());
 }
 
 void MediaRecorderPrivateEncoder::appendData(std::span<const uint8_t> data)
@@ -527,6 +528,15 @@ void MediaRecorderPrivateEncoder::flushDataBuffer()
     if (m_dataBuffer.isEmpty())
         return;
     m_data.append(std::exchange(m_dataBuffer, { }));
+}
+
+bool MediaRecorderPrivateEncoder::segmentsMustStartWithVideoKeyframe() const
+{
+    if (!hasVideo())
+        return false;
+    if (!m_writer)
+        return false;
+    return m_writer->segmentsMustStartWithKeyframe();
 }
 
 bool MediaRecorderPrivateEncoder::hasMuxedDataSinceEndSegment() const
@@ -588,6 +598,8 @@ void MediaRecorderPrivateEncoder::enqueueCompressedAudioSampleBuffers()
         if (!m_hasStartedAudibleAudioFrame && sample->duration())
             m_hasStartedAudibleAudioFrame = true;
         m_encodedAudioFrames.append(samplesBlockFromCMSampleBuffer(sample->sampleBuffer(), m_audioCompressedAudioInfo.get()));
+        m_lastEncodedAudioSampleRange = { sample->presentationTime(), sample->presentationEndTime() };
+        LOG(MediaStream, "enqueueCompressedAudioSampleBuffers: adding compressed audio: %f-%f", sample->presentationTime().toDouble(), sample->presentationEndTime().toDouble());
     };
 
     while (RetainPtr sampleBlock = audioConverter()->takeOutputSampleBuffer()) {
@@ -621,22 +633,37 @@ void MediaRecorderPrivateEncoder::maybeStartWriter()
     m_writerIsStarted = true;
 }
 
-Ref<GenericPromise> MediaRecorderPrivateEncoder::encodePendingVideoFrames()
+Ref<GenericPromise> MediaRecorderPrivateEncoder::encodePendingVideoFrames(const MediaTime& endTime)
 {
     assertIsCurrent(queueSingleton());
 
-    if (m_pendingVideoFrames.isEmpty())
+    if (m_videoEncoderCreationPromise) {
+        GenericPromise::Producer producer;
+        Ref promise = producer.promise();
+        RefPtr { m_videoEncoderCreationPromise }->chainTo(WTF::move(producer));
+        return promise;
+    }
+
+    size_t framesToEncode = [&] {
+        assertIsCurrent(queueSingleton());
+        if (m_pendingVideoFrames.isEmpty() || endTime.isPositiveInfinite())
+            return m_pendingVideoFrames.size();
+        size_t framesPriorEndTime = 0;
+        for (auto& frame : m_pendingVideoFrames) {
+            if (frame.second > endTime)
+                break;
+            framesPriorEndTime++;
+        }
+        return framesPriorEndTime;
+    }();
+
+    if (!framesToEncode)
         return GenericPromise::createAndResolve();
 
     GenericPromise::Producer producer;
     Ref promise = producer.promise();
 
-    if (m_videoEncoderCreationPromise) {
-        RefPtr { m_videoEncoderCreationPromise }->chainTo(WTF::move(producer));
-        return promise;
-    }
-
-    Vector<Ref<VideoEncoder::EncodePromise>> promises { m_pendingVideoFrames.size() , [&](size_t) {
+    Vector<Ref<VideoEncoder::EncodePromise>> promises { framesToEncode , [&](size_t) {
         assertIsCurrent(queueSingleton());
         auto frame = m_pendingVideoFrames.takeFirst();
         bool needVideoKeyframe = false;
@@ -646,7 +673,7 @@ Ref<GenericPromise> MediaRecorderPrivateEncoder::encodePendingVideoFrames()
             m_lastVideoKeyframeTime = frame.second;
             m_needKeyFrame = false;
         }
-        LOG(MediaStream, "encodePendingVideoFrames:encoding video frame:%f (us:%lld) kf:%d", frame.second.toDouble(), frame.second.toMicroseconds(), needVideoKeyframe);
+        RELEASE_LOG_INFO(MediaStream, "encodePendingVideoFrames:encoding video frame:%f (us:%lld) kf:%d endTime:%f", frame.second.toDouble(), frame.second.toMicroseconds(), needVideoKeyframe, endTime.toDouble());
         return Ref { *m_videoEncoder }->encode({ WTF::move(frame.first), frame.second.toMicroseconds(), { } }, needVideoKeyframe);
     } };
     VideoEncoder::EncodePromise::all(WTF::move(promises))->chainTo(WTF::move(producer));
@@ -686,7 +713,7 @@ void MediaRecorderPrivateEncoder::processVideoEncoderActiveConfiguration(const V
             }
         });
     }
-    encodePendingVideoFrames();
+    encodePendingVideoFrames(MediaTime::positiveInfiniteTime());
 }
 
 void MediaRecorderPrivateEncoder::enqueueCompressedVideoFrame(VideoEncoder::EncodedFrame&& frame)
@@ -767,7 +794,7 @@ MediaTime MediaRecorderPrivateEncoder::flushToEndSegment(const MediaTime& flushT
 {
     assertIsCurrent(queueSingleton());
 
-    LOG(MediaStream, "MediaRecorderPrivateEncoder::flushToEndSegment(%f): lastAudioReceived:%f audioqueue:%zu first:%f last:%f videoQueue:%zu first:%f (kf:%d) last:%f", flushTime.toDouble(), lastEnqueuedAudioTime().toDouble(), m_encodedAudioFrames.size(), m_encodedAudioFrames.size() ? m_encodedAudioFrames.first()->presentationTime().toDouble() : 0, m_encodedAudioFrames.size() ? m_encodedAudioFrames.last()->presentationTime().toDouble() : 0, m_encodedVideoFrames.size(), m_encodedVideoFrames.size() ? m_encodedVideoFrames.first()->presentationTime().toDouble() : 0, m_encodedVideoFrames.size() ? m_encodedVideoFrames.first()->isSync() : 0, m_encodedVideoFrames.size() ? m_encodedVideoFrames.last()->presentationTime().toDouble() : 0);
+    RELEASE_LOG_INFO(MediaStream, "MediaRecorderPrivateEncoder::flushToEndSegment(%f): lastAudioReceived:%f audioqueue:%zu first:%f last:%f videoQueue:%zu first:%f (kf:%d) last:%f", flushTime.toDouble(), lastEnqueuedAudioTime().toDouble(), m_encodedAudioFrames.size(), m_encodedAudioFrames.size() ? m_encodedAudioFrames.first()->presentationTime().toDouble() : 0, m_encodedAudioFrames.size() ? m_encodedAudioFrames.last()->presentationTime().toDouble() : 0, m_encodedVideoFrames.size(), m_encodedVideoFrames.size() ? m_encodedVideoFrames.first()->presentationTime().toDouble() : 0, m_encodedVideoFrames.size() ? m_encodedVideoFrames.first()->isSync() : 0, m_encodedVideoFrames.size() ? m_encodedVideoFrames.last()->presentationTime().toDouble() : 0);
 
     if (hasAudio())
         enqueueCompressedAudioSampleBuffers(); // compressedAudioOutputBufferCallback isn't always called when new frames are available. Force refresh
@@ -779,14 +806,16 @@ MediaTime MediaRecorderPrivateEncoder::flushToEndSegment(const MediaTime& flushT
 
     // Find last video keyframe in the queue.
     MediaSamplesBlock* lastVideoKeyFrame = nullptr;
-    for (auto it = m_encodedVideoFrames.rbegin(); it != m_encodedVideoFrames.rend(); ++it) {
-        if ((*it)->isSync()) {
-            lastVideoKeyFrame = it->ptr();
-            break;
+    if (segmentsMustStartWithVideoKeyframe()) {
+        for (auto it = m_encodedVideoFrames.rbegin(); it != m_encodedVideoFrames.rend(); ++it) {
+            if ((*it)->isSync()) {
+                lastVideoKeyFrame = it->ptr();
+                break;
+            }
         }
     }
 
-    // Mux all video frames until we reached the end of the queue or we found a keyframe.
+    // Mux all video frames until we reached the end of the queue or we reached a video frame greater than flushTime or we found a keyfram (if writer requires it).
     while ((!m_encodedVideoFrames.isEmpty() || !m_encodedAudioFrames.isEmpty())) {
         auto* audioFrame = m_encodedAudioFrames.size() ? m_encodedAudioFrames.first().ptr() : nullptr;
         auto* videoFrame = m_encodedVideoFrames.size() ? m_encodedVideoFrames.first().ptr() : nullptr;
@@ -797,13 +826,31 @@ MediaTime MediaRecorderPrivateEncoder::flushToEndSegment(const MediaTime& flushT
             LOG(MediaStream, "flushToEndSegment: stopping prior video keyframe time:%f", frame.presentationTime().toDouble());
             return frame.presentationTime();
         }
-        // We are about to end the current segment and the next segment needs to start with a keyframe.
-        // Don't mux the current audio frame (if any) if the next video frame is a keyframe and is to be displayed
-        // while the current audio frame is playing.
-        if (!takeVideo && videoFrame) {
-            if ((videoFrame->presentationTime() <= frame.presentationEndTime()) && videoFrame == lastVideoKeyFrame) {
-                LOG(MediaStream, "flushToEndSegment: stopping prior audio containing video keyframe time:%f", frame.presentationTime().toDouble());
-                return frame.presentationTime();
+
+        if (segmentsMustStartWithVideoKeyframe()) {
+            // We are about to end the current segment and the next segment needs to start with a keyframe.
+            // Don't mux the current audio frame (if any) if the next video frame is a keyframe and is to be displayed
+            // while the current audio frame is playing.
+            if (!takeVideo && videoFrame) {
+                if ((videoFrame->presentationTime() <= frame.presentationEndTime()) && videoFrame == lastVideoKeyFrame) {
+                    LOG(MediaStream, "flushToEndSegment: stopping prior audio containing video keyframe time:%f", frame.presentationTime().toDouble());
+                    return frame.presentationTime();
+                }
+            }
+        } else {
+            if (takeVideo && videoFrame->presentationTime() > (hasAudio() ? std::min(m_lastEncodedAudioSampleRange.end, flushTime) : flushTime)) {
+                auto endMuxedTime = hasAudio() ? std::min(m_lastEncodedAudioSampleRange.end, frame.presentationTime()) : frame.presentationTime();
+                LOG(MediaStream, "flushToEndSegment: stopping with video frame:%f (> %f) lastEncodedAudioSampleRange:%f-%f lastRawAudioSample:%f endMuxedTime:%f", frame.presentationTime().toDouble(), flushTime.toDouble(), m_lastEncodedAudioSampleRange.start.toDouble(), m_lastEncodedAudioSampleRange.end.toDouble(), m_lastRawAudioSample.toDouble(), endMuxedTime.toDouble());
+                return endMuxedTime;
+            }
+            // We are about to end the current segment.
+            // Don't mux the current audio frame (if any) if the next video frame is past flushTime and is to be displayed
+            // while the current audio frame is playing.
+            if (!takeVideo && videoFrame) {
+                if ((videoFrame->presentationTime() <= frame.presentationEndTime()) && videoFrame->presentationTime() > flushTime) {
+                    RELEASE_LOG_INFO(MediaStream, "flushToEndSegment: stopping prior audio containing video keyframe time:%f", frame.presentationTime().toDouble());
+                    return frame.presentationTime();
+                }
             }
         }
 
@@ -817,7 +864,7 @@ MediaTime MediaRecorderPrivateEncoder::flushToEndSegment(const MediaTime& flushT
         interleaveAndEnqueueNextFrame();
     };
 
-    return flushTime;
+    return hasAudio() && m_interleavedFrames.size() ? m_interleavedFrames.last()->presentationEndTime() : flushTime;
 }
 
 void MediaRecorderPrivateEncoder::flushAllEncodedQueues()
@@ -850,13 +897,13 @@ void MediaRecorderPrivateEncoder::interleaveAndEnqueueNextFrame()
     bool takeVideo = videoFrame && (!audioFrame || videoFrame->presentationTime() < audioFrame->presentationTime());
     UniqueRef frame = (takeVideo ? m_encodedVideoFrames : m_encodedAudioFrames).takeFirst();
 
-    ASSERT(!takeVideo || !m_nextVideoFrameMuxedShouldBeKeyframe || frame->isSync());
+    ASSERT(!takeVideo || !segmentsMustStartWithVideoKeyframe() || !m_nextVideoFrameMuxedShouldBeKeyframe || frame->isSync());
 
-    ASSERT(frame->presentationTime() >= m_lastMuxedSampleStartTime);
     if (frame->presentationTime() < m_lastMuxedSampleStartTime)
-        RELEASE_LOG_ERROR(MediaStream, "interleaveAndEnqueueNextFrame: added %s (kf:%d) frame time:%f-%f (previous:%f type:%s) size:%zu with error", takeVideo ? "video" : "audio", frame->isSync(), frame->presentationTime().toDouble(), frame->presentationEndTime().toDouble(), m_lastMuxedSampleStartTime.toDouble(), m_lastMuxedSampleIsVideo ? "video" : "audio" , m_interleavedFrames.size());
+        RELEASE_LOG_ERROR(MediaStream, "interleaveAndEnqueueNextFrame: added %s (kf:%d) frame time:%f-%f (previous:%f type:%s) lastEnqueuedRawVideoFrame:%f m_lastRawAudioSample:%f m_lastEncodedAudioSampleRange:%f-%f size:%zu with error", takeVideo ? "video" : "audio", frame->isSync(), frame->presentationTime().toDouble(), frame->presentationEndTime().toDouble(), m_lastMuxedSampleStartTime.toDouble(), m_lastMuxedSampleIsVideo ? "video" : "audio" , m_lastEnqueuedRawVideoFrame.toDouble(), m_lastRawAudioSample.toDouble(), m_lastEncodedAudioSampleRange.start.toDouble(), m_lastEncodedAudioSampleRange.end.toDouble(), m_interleavedFrames.size());
     else
-        LOG(MediaStream, "interleaveAndEnqueueNextFrame: added %s (kf:%d) frame time:%f-%f (previous:%f type:%s) size:%zu", takeVideo ? "video" : "audio", frame->isSync(), frame->presentationTime().toDouble(), frame->presentationEndTime().toDouble(), m_lastMuxedSampleStartTime.toDouble(), m_lastMuxedSampleIsVideo ? "video" : "audio" , m_interleavedFrames.size());
+        LOG(MediaStream, "interleaveAndEnqueueNextFrame: added %s (kf:%d) frame time:%f-%f (previous:%f type:%s) m_lastRawAudioSample:%f m_lastEncodedAudioSampleRange:%f-%f size:%zu", takeVideo ? "video" : "audio", frame->isSync(), frame->presentationTime().toDouble(), frame->presentationEndTime().toDouble(), m_lastMuxedSampleStartTime.toDouble(), m_lastMuxedSampleIsVideo ? "video" : "audio" , m_lastRawAudioSample.toDouble(), m_lastEncodedAudioSampleRange.start.toDouble(), m_lastEncodedAudioSampleRange.end.toDouble(), m_interleavedFrames.size());
+    ASSERT(frame->presentationTime() >= m_lastMuxedSampleStartTime);
     m_lastMuxedSampleStartTime = frame->presentationTime();
     m_lastMuxedSampleIsVideo = takeVideo;
     if (takeVideo) {
@@ -867,8 +914,6 @@ void MediaRecorderPrivateEncoder::interleaveAndEnqueueNextFrame()
         m_lastMuxedAudioSampleEndTime = frame->presentationEndTime();
     }
     m_interleavedFrames.append(WTF::move(frame));
-
-    return;
 }
 
 void MediaRecorderPrivateEncoder::stopRecording()
@@ -944,13 +989,13 @@ Ref<GenericPromise> MediaRecorderPrivateEncoder::flushPendingData(const MediaTim
 {
     assertIsCurrent(queueSingleton());
 
-    m_needKeyFrame = true;
+    m_needKeyFrame = segmentsMustStartWithVideoKeyframe();
 
     LOG(MediaStream, "MediaRecorderPrivateEncoder::FlushPendingData upTo:%f", currentTime.toDouble());
 
     Vector<Ref<GenericPromise>> promises;
     promises.reserveInitialCapacity(size_t(!!m_videoEncoder) + size_t(!!m_audioConverter) + 1);
-    promises.append(encodePendingVideoFrames());
+    promises.append(encodePendingVideoFrames(currentTime));
     if (m_videoEncoder)
         promises.append(Ref { *m_videoEncoder }->flush());
     if (RefPtr converter = audioConverter())
@@ -978,20 +1023,23 @@ Ref<GenericPromise> MediaRecorderPrivateEncoder::flushPendingData(const MediaTim
         if (endMuxedTime.isInvalid())
             return GenericPromise::createAndResolve();
 
-        // Write a new segment if:
+        // Write to MediaRecorderPrivateWriter if:
         // 1: We aren't stopped (all frames will be flushed and written upon the promise being resolved) and
-        // 2: We have muxed data for all tracks (Ending the current segment before frames of all kind have been amended results in a broken file) and
-        // 3: We have accumulated more than m_minimumSegmentDuration of content or
-        // 4: We are paused.
-        if (!m_isStopped && hasMuxedDataSinceEndSegment() && result
-            && ((endMuxedTime - m_startSegmentTime >= m_minimumSegmentDuration) || m_isPaused)) {
-            LOG(MediaStream, "FlushPendingData::forceNewSegment at time:%f", endMuxedTime.toDouble());
-            m_nextVideoFrameMuxedShouldBeKeyframe = true;
-            m_startSegmentTime = endMuxedTime;
+        // 2: We have muxed data and
+        // 3: waitForMatchingAudio succeeded and
+        // If writer requires segments to start with keyframes:
+        // 4: We have muxed data for all tracks (Ending the current segment before frames of all kind have been amended results in a broken file) and
+        // 5: We have accumulated more than m_minimumSegmentDuration of content or we are paused.
+        if (!m_isStopped && !m_interleavedFrames.isEmpty() && result
+            && (m_isPaused || !segmentsMustStartWithVideoKeyframe() || (hasMuxedDataSinceEndSegment() && (endMuxedTime - m_startLastSegmentTime >= m_minimumSegmentDuration)))) {
+            if (endMuxedTime - m_startLastSegmentTime >= m_minimumSegmentDuration)
+                m_startLastSegmentTime = endMuxedTime;
+            m_nextVideoFrameMuxedShouldBeKeyframe = segmentsMustStartWithVideoKeyframe();
             m_hasMuxedAudioFrameSinceEndSegment = false;
             m_hasMuxedVideoFrameSinceEndSegment = false;
             GenericPromise::Producer producer;
             Ref promise = producer.promise();
+            LOG(MediaStream, "MediaRecorderPrivateEncoder::flushPendingData writing %zu frames start:%f end:%f", m_interleavedFrames.size(), m_interleavedFrames.first()->presentationTime().toDouble(), m_interleavedFrames.last()->presentationEndTime().toDouble());
             m_writer->writeFrames(std::exchange(m_interleavedFrames, { }), endMuxedTime)->chainTo(WTF::move(producer));
             return promise;
         }
