Source/WebCore/platform/mediarecorder/MediaRecorderPrivateEncoder.h
@@ -28,6 +28,7 @@
 
 #include "CAAudioStreamDescription.h"
 #include "MediaRecorderPrivateWriter.h"
+#include "PlatformTimeRanges.h"
 #include "SharedBuffer.h"
 #include "VideoEncoder.h"
 #include <atomic>
@@ -94,6 +95,7 @@ private:
     MediaTime currentEndTime() const;
 
     void flushDataBuffer();
+    bool segmentsMustStartWithVideoKeyframe() const;
 
     static void compressedAudioOutputBufferCallback(void*, CMBufferQueueTriggerToken);
 
@@ -109,7 +111,7 @@ private:
     void enqueueCompressedAudioSampleBuffers();
 
     void appendVideoFrame(MediaTime, Ref<VideoFrame>&&);
-    Ref<GenericPromise> encodePendingVideoFrames();
+    Ref<GenericPromise> encodePendingVideoFrames(const MediaTime&);
     void processVideoEncoderActiveConfiguration(const VideoEncoder::Config&, const VideoEncoderActiveConfiguration&);
     void enqueueCompressedVideoFrame(VideoEncoder::EncodedFrame&&);
 
@@ -158,6 +160,8 @@ private:
     std::atomic<size_t> m_currentRingBufferId { 0 };
     std::atomic<int64_t> m_lastEnqueuedAudioTimeUs { 0 };
     std::atomic<int64_t> m_currentAudioTimeUs { 0 };
+    MediaTime m_lastRawAudioSample { MediaTime::invalidTime() };
+    PlatformTimeRanges::Range m_lastEncodedAudioSampleRange WTF_GUARDED_BY_CAPABILITY(queueSingleton()) { MediaTime::negativeInfiniteTime(), MediaTime::negativeInfiniteTime() };
 
     // Audio thread variables.
     std::optional<CAAudioStreamDescription> m_currentStreamDescription;
@@ -195,7 +199,7 @@ private:
     bool m_isPaused WTF_GUARDED_BY_CAPABILITY(queueSingleton()) { false };
     bool m_hasStartedAudibleAudioFrame WTF_GUARDED_BY_CAPABILITY(queueSingleton()) { false };
     bool m_needKeyFrame WTF_GUARDED_BY_CAPABILITY(queueSingleton()) { true };
-    MediaTime m_startSegmentTime WTF_GUARDED_BY_CAPABILITY(queueSingleton()) { MediaTime::zeroTime() };
+    MediaTime m_startLastSegmentTime WTF_GUARDED_BY_CAPABILITY(queueSingleton()) { MediaTime::zeroTime() };
 
     const MediaTime m_minimumSegmentDuration { MediaTime::createWithDouble(1) };
     const MediaTime m_maxGOPDuration { MediaTime::createWithDouble(2) };
